--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,1 +1,6 @@
-@import "../../node_modules/modern-normalize/modern-normalize.css";
+@use 'modern-normalize/modern-normalize.css';
+
+body {
+  background-color: orange;
+  display: grid;
+}
